Final Day: finishing the project

--- a/templates/auth/login.twig
+++ b/templates/auth/login.twig
@@ -18,7 +18,7 @@
 
     <div class="hr"></div>
     <div class="row">
-      <div class="muted small">New here? Create an account in 30 seconds.</div>
+      <div class="muted small">New here? Create an account.</div>
       <a href="/register" class="btn secondary">Create account</a>
     </div>
   </div>
